--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
     <title>Menu</title>
     <!--Css File-->
     <link rel="stylesheet" href="style/styling.css">
-    <link rel="stylesheet" href="style/header1.css">
+    <link rel="stylesheet" href="style/header.css">
     <link rel="stylesheet" href="style/landing.css">
     <link rel="stylesheet" href="style/About_us.css">
     <link rel="stylesheet" href="style/Our_specials.css">
